--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+body{
+    background-color: #d3d3d3;
+}
+
 h1{
     color: red;
+    text-align: center;
+}
+
+h2{
+    
+    text-align: center;
 }
