--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,27 @@ h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+    width: 10%;
   }
 
-ul{
+.links{
     list-style-type: none;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
+.pro-p{
+    display: block;
+    width: 25%;     
+}
 
+.produce{
+    
+}
+
+#linkedin{
+    display: block;
+    width: 5%;
+}
 
