--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 h1{
-    color: red;
+    color: blue;
     text-align: center;
 }
 
@@ -24,6 +24,7 @@ h2{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    border: 4px solid blue;
 }
 
 .pro-p{
@@ -31,9 +32,7 @@ h2{
     width: 25%;     
 }
 
-.produce{
-    
-}
+
 
 #linkedin{
     display: block;
