--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 h1{
-    color: blue;
+    color: #181892;
     text-align: center;
 }
 
@@ -24,7 +24,7 @@ h2{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 4px solid blue;
+    border: 4px solid #181892;
 }
 
 .pro-p{
@@ -34,8 +34,7 @@ h2{
 
 
 
-#linkedin{
-    display: block;
+#linkedin{    
     width: 5%;
 }
 
