--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,10 @@ p{
     width: 5%;
 }
 
+#facebook{    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5%;
+}
+
