--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ h2{
     border: 4px solid #181892;
 }
 
+.about-me{
+    margin-top: 100px;
+}
 
 h3{
     text-align: center;
@@ -42,6 +45,9 @@ h3{
     padding: 10px;
 }
 
+.software-projects{
+    margin-top: 100px;
+}
 
 p{
     text-align: center;
