--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,11 @@ body{
 }
 
 h1{
-    color: #181892;
+    /* color: #181892; */
     text-align: center;
 }
 
 h2{
-    
     text-align: center;
 }
 
