changed gmail icon size

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,13 @@ p{
 
 }
 
+#gmail{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5%;
+}
+
 #linkedin{    
     display: block;
     margin-left: auto;
