--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,22 @@ body{
     background-color: #d3d3d3;
 }
 
+.topnav{
+    list-style-type: none;
+    background-color: #333;
+    overflow: hidden;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    background-color: #ddd;
+    color: black;
+    background-color: #4CAF50;
+    color: white;
+}
+
 h1{
     /* color: #181892; */
     text-align: center;
@@ -18,13 +34,13 @@ h2{
     width: 20%;
 }
 
-.links{
+/* .links{
     list-style-type: none;
     display: flex;
     justify-content: space-around;
     align-items: center;
     border: 4px solid #181892;
-}
+} */
 
 h3{
     text-align: center;
@@ -75,10 +91,5 @@ p{
     width: 5%;
 }
 
-#facebook{    
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 5%;
-}
+
 
