--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body{
 
 /* Add a black background color to the top navigation */
 .topnav {
+    list-style-type: none;  
     background-color: #333;
     overflow: hidden;
   }
