edited about me

--- a/css/style.css
+++ b/css/style.css
@@ -71,15 +71,17 @@ h3{
 
 .about-me{
     background-color: #333;
-    margin-top: 600px;
+    color: #d3d3d3;
+    margin-top: 500px;
+    padding-bottom: 300px;
 }
 
 .software-projects{
-    margin-top: 600px;
+    margin-top: 500px;
 }
 
 .contact-me{
-    margin-top: 600px;
+    margin-top: 500px;
 }
 
 p{
