--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ h3{
     color: #d3d3d3;
     margin-top: 500px;
     padding-bottom: 300px;
+    font-size: 16;
+    font-weight: bold;
 }
 
 .software-projects{
