--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ h2{
     margin-left: auto;
     margin-right: auto;
     width: 20%;
+    margin-top: 150px;
 }
 
 /* .links{
@@ -73,7 +74,7 @@ h3{
     background-color: #333;
     color: #d3d3d3;
     margin-top: 500px;
-    padding-bottom: 300px;
+    padding-bottom: 500px;
     font-size: 16;
     font-weight: bold;
 }
