--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ h3{
     background-color: #333;
     color: #d3d3d3;
     margin-top: 500px;
+    padding-top: 200px;
     padding-bottom: 500px;
     font-size: 16;
     font-weight: bold;
